syntax = "proto3";

package protoutil.aip.v1;

message TestPaginationRequest {
  string parent = 1;

  int32 page_size = 2;

  string page_token = 3;

  int32 skip = 4;
}
